--- a/PlayingCards.UnitTest/PlayingCards.UnitTest.csproj
+++ b/PlayingCards.UnitTest/PlayingCards.UnitTest.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BT Technical Task\BT Technical Task.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
